feat(sales): added the integration between the application and the payments service
