# internal/vehicles/infrastructure/controllers/list_vehicles_controller.go
@@ -30,15 +30,24 @@ func (ctrl *ListVehiclesController) GetBind() shared.ControllerBind {
 }
 
 // Execute
-// @Summary List vehicles by criteria
-// @Description list vehicles by criteria
-// @BasePath /v1/vehicles
-// @Tags vehicles
-// @Accept application/json
-// @Produce application/json
-// @Success 200 {object} controllers.PaginatedResponse[responses.VehicleViewResponse]
-// @Failure 500 {object} controllers.ErrorResponse
-// @Router /v1/vehicles [get]
+// ListVehicles handles the retrieval and filtering of a paginated list of vehicles.
+//
+// @Summary      List and Filter Vehicles
+// @Description  Retrieves a paginated list of vehicles. This endpoint supports filtering by brand, model, and status, as well as sorting and pagination.
+// @ID           list-vehicles
+// @Tags         vehicles
+// @Produce      json
+// @Param        brand     query     string  false  "Filter by vehicle brand (e.g., 'Ford')"
+// @Param        model     query     string  false  "Filter by vehicle model (e.g., 'Mustang')"
+// @Param        status    query     string  false  "Filter by vehicle status" enums(available, sold)
+// @Param        sortBy    query     string  false  "Field to sort by" enums(price, year, createdAt) default(createdAt)
+// @Param        sortOrder query     string  false  "Sort order ('asc' or 'desc')" enums(asc, desc) default(desc)
+// @Param        page      query     int     false  "Page number for pagination" default(1)
+// @Param        pageSize  query     int     false  "Number of items per page" default(10)
+// @Success      200       {object}  controllers.PaginatedResponse[responses.VehicleViewResponse] "A paginated list of vehicles that match the criteria"
+// @Failure      400       {object}  controllers.ErrorResponse "Bad Request (e.g., invalid filter or pagination parameters)"
+// @Failure      500       {object}  controllers.ErrorResponse "Internal Server Error"
+// @Router       /v1/vehicles [get]
 func (ctrl *ListVehiclesController) Execute(ectx echo.Context) error {
 	searchParams, err := ctrl.GetQueryParams(ectx)
 	if err != nil {
