# internal/vehicles/infrastructure/controllers/update_vehicle_controller.go
@@ -5,6 +5,7 @@ import (
 
 	shared "github.com/kalilventura/vehicle-management/internal/shared/domain/entities"
 	"github.com/kalilventura/vehicle-management/internal/shared/infrastructure/controllers"
+	"github.com/kalilventura/vehicle-management/internal/shared/infrastructure/controllers/helpers"
 	"github.com/kalilventura/vehicle-management/internal/vehicles/domain/commands"
 	"github.com/kalilventura/vehicle-management/internal/vehicles/domain/entities"
 	"github.com/kalilventura/vehicle-management/internal/vehicles/infrastructure/controllers/requests"
@@ -29,19 +30,24 @@ func (ctrl *UpdateVehicleController) GetBind() shared.ControllerBind {
 	}
 }
 
-// Execute godoc
-// @Summary Update a vehicle
-// @Description Update a vehicle
-// @BasePath /v1/vehicles/:id
-// @Tags vehicles
-// @Accept application/json
-// @Produce application/json
-// @Param id path string true "Vehicle ID"
-// @Param request body requests.UpdateVehicleRequest true "Request body"
-// @Success 200 {object} controllers.SuccessResponse "OK"
-// @Failure 400 {object} controllers.ErrorResponse "Not Found"
-// @Failure 500 {object} controllers.ErrorResponse "Internal Server Error"
-// @Router /v1/vehicles/:id [patch]
+// Execute handles the partial update of an existing vehicle's attributes.
+//
+// UpdateVehicle handles the partial update of an existing vehicle's attributes.
+//
+// @Summary      Update Vehicle Details (Partial)
+// @Description  Partially updates the data for a specific vehicle. Only the fields provided in the JSON request body will be modified. All other fields will remain unchanged.
+// @ID           update-vehicle-by-id
+// @Tags         vehicles
+// @Accept       json
+// @Produce      json
+// @Param        id      path      string                         true  "The unique identifier (UUID) of the vehicle to update" format(uuid)
+// @Param        vehicle body      requests.UpdateVehicleRequest  true  "Payload with the vehicle fields to be updated"
+// @Success      200     {object}  controllers.SuccessResponse{data=responses.VehicleResponse} "Vehicle updated successfully"
+// @Failure      400     {object}  controllers.ErrorResponse "Bad Request (e.g., invalid data format or validation error)"
+// @Failure      404     {object}  controllers.ErrorResponse "The vehicle with the specified ID was not found"
+// @Failure      409     {object}  controllers.ErrorResponse "Conflict (e.g., updating a unique field to a value that already exists)"
+// @Failure      500     {object}  controllers.ErrorResponse "Internal Server Error"
+// @Router       /v1/vehicles/{id} [patch]
 func (ctrl *UpdateVehicleController) Execute(ectx echo.Context) error {
 	var handler error
 	id := ectx.Param("id")
@@ -87,7 +93,7 @@ func (ctrl *UpdateVehicleController) onNotFound(ectx echo.Context) error {
 }
 
 func (ctrl *UpdateVehicleController) onInvalid(ectx echo.Context, err error) error {
-	validationErrors := ctrl.extractValidationErrors(err)
+	validationErrors := helpers.ExtractValidationErrors(err)
 	response := controllers.NewErrorResponse(
 		http.StatusBadRequest,
 		validationErrors,
@@ -102,10 +108,4 @@ func (ctrl *UpdateVehicleController) onError(ectx echo.Context, err error) error
 		nil,
 	)
 	return ectx.JSON(http.StatusInternalServerError, response)
-}
-
-func (ctrl *UpdateVehicleController) extractValidationErrors(err error) map[string]string {
-	return map[string]string{
-		"generic": err.Error(),
-	}
 }
